5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4013/executions/1635_2704.log
== TEST (2019-04-10 14:19:57) 
-- CODE:
n = float(input("nota do aluno:"))
m = input("S / N :")
if ( s ):
	nota final = (n * 10/100) +  n
else:
	nota final = n 
print(nota final)
-- ERROR:
File "XXXX", line 4
    nota final = (n * 10/100) +  n
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:20:13) 
-- CODE:
n = float(input("nota do aluno:"))
m = input("S / N :")
if ( s ):
	nota final = (n * (10/100)) +  n
else:
	nota final = n 
print(nota final)
-- ERROR:
File "XXXX", line 4
    nota final = (n * (10/100)) +  n
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:20:28) 
-- CODE:
n = float(input("nota do aluno:"))
m = input("S / N :")
if ( s ):
	nota final = n + (n * (10/100)) 
else:
	nota final = n 
print(nota final)
-- ERROR:
File "XXXX", line 4
    nota final = n + (n * (10/100)) 
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:21:15) 
-- CODE:
n = float(input("nota do aluno:"))
m = input("S / N :")
if ( m == "S" ):
	nota final = n + (n * (10/100)) 
else:
	nota final = n 
print(nota final)
-- EXECUTION TIME:
0.192223
-- ERROR:
  File "/home/codebench/codes/1635/2704/main.py", line 4
    nota final = n + (n * (10/100)) 
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:21:16) 
-- CODE:
n = float(input("nota do aluno:"))
m = input("S / N :")
if ( m == "S" ):
	nota final = n + (n * (10/100)) 
else:
	nota final = n 
print(nota final)
-- ERROR:
File "XXXX", line 4
    nota final = n + (n * (10/100)) 
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:21:29) 
-- CODE:
n = float(input("nota do aluno:"))
m = input("S / N :")
if ( m == "S" ):
	nota_final = n + (n * (10/100)) 
else:
	nota_final = n 
print(nota_final)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:21:50) 
-- CODE:
n = float(input("nota do aluno:"))
m = input("S / N :")
if ( m == "S" ):
	nota_final = n + (n * (10/100)) 
else:
	nota_final = n 
print(nota_final)
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:21:59) 
-- CODE:
n = float(input("nota do aluno:"))
m = input("S / N :")
if ( m == "S" ):
	nota_final = n + (n * (10/100)) 
else:
	nota_final = n 
print(nota_final)
-- EXECUTION TIME:
0.17489
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
